--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
           document.getElementById("total-money").innerText =
             convertToCommaNumber(result) + " VND";
 
-          document.getElementById("total-rate-final").innerText =
+          document.getElementById("total-money-final").innerText =
             convertToCommaNumber(result + baseMoney) + " VND";
 
           return result;
